--- a/database/.pipeline/templates/db.setup.dc.yaml
+++ b/database/.pipeline/templates/db.setup.dc.yaml
@@ -49,7 +49,7 @@ objects:
         role: setup
     spec:
       containers:
-        - name: test
+        - name: postgresql-setup
           image: '${IMAGE}'
           resources:
             limits:
