--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -310,49 +310,36 @@ services:
     container_name: ${DOCKER_PROJECT_NAME}-geoserver-${DOCKER_NAMESPACE}-container
     # restart: on-failure
     ports:
-      - ${GEOSERVER_PORT}:8080
+      - ${GEOSERVER_TOMCAT_PORT}:8080
     # healthcheck:
     #   test: curl --fail -s http://localhost:8080/ || exit 1
     #   interval: 5s
     #   timeout: 5s
     #   retries: 30
     environment:
-      - POSTGRES_JNDI=TRUE
-      - HOST=${DB_HOST}
-      - POSTGRES_DB=${DB_DATABASE}
-      - POSTGRES_USER=${DB_ADMIN}
-      - POSTGRES_PASS=${DB_ADMIN_PASS}
-      - GEOSERVER_DATA_DIR=${GEOSERVER_DATA_DIR}
-      - GEOWEBCACHE_CACHE_DIR=${GEOSERVER_GEOWEBCACHE_CACHE_DIR}
-      - GEOSERVER_ADMIN_PASSWORD=${GEOSERVER_ADMIN_PASSWORD}
+      # - POSTGRES_JNDI=TRUE
+      # - HOST=${DB_HOST}
+      # - POSTGRES_DB=${DB_DATABASE}
+      # - POSTGRES_USER=${DB_ADMIN}
+      # - POSTGRES_PASS=${DB_ADMIN_PASS}
+      - GEOSERVER_DATA_DIR=${GEOSERVER_DATA_DIRECTORY}
+      - GEOWEBCACHE_CACHE_DIR=${GEOSERVER_GEOWEBCACHE_CACHE_DIRECTORY}
       - GEOSERVER_ADMIN_USER=${GEOSERVER_ADMIN_USER}
+      - GEOSERVER_ADMIN_PASSWORD=${GEOSERVER_ADMIN_PASSWORD}
       # - INITIAL_MEMORY=${GEOSERVER_INITIAL_MEMORY}
       # - MAXIMUM_MEMORY=${GEOSERVER_MAXIMUM_MEMORY}
-      - TOMCAT_USER=${TOMCAT_USER}
-      - TOMCAT_PASSWORD=${TOMCAT_PASSWORD}
+      - TOMCAT_EXTRAS=false
+      - ROOT_WEBAPP_REDIRECT=true
     volumes:
-      - postgres:${GEOSERVER_DATA_DIR}
+      # - geoserver:${GEOSERVER_DATA_DIRECTORY}
+      # Overwrite default context.xml
+      - ./Containers/geoserver/data_dir:${GEOSERVER_DATA_DIRECTORY}
       - ./Containers/geoserver/settings/context.xml:/build_data/context.xml
     networks:
       - biohubbc-network
     depends_on:
       - db
       - db_setup
-
-  # Build the n8n nginx proxy docker image
-  # geoserver_nginx:
-  #   image: ${DOCKER_PROJECT_NAME}-geoserver-nginx-${DOCKER_NAMESPACE}-img
-  #   container_name: ${DOCKER_PROJECT_NAME}-geoserver-nginx-${DOCKER_NAMESPACE}-container
-  #   build:
-  #     context: ./.docker/nginx/geoserver
-  #     dockerfile: Dockerfile
-  #   restart: always
-  #   ports:
-  #     - ${GEOSERVER_PROXY_PORT}:5100
-  #   networks:
-  #     - biohubbc-network
-  #   depends_on:
-  #     - geoserver
 
 networks:
   biohubbc-network:
@@ -361,3 +348,5 @@ networks:
 volumes:
   postgres:
     name: ${DOCKER_PROJECT_NAME}-db-${DOCKER_NAMESPACE}-vol
+  # geoserver:
+  #   name: ${DOCKER_PROJECT_NAME}-geoserver-${DOCKER_NAMESPACE}-vol
