--- a/geoserver/.pipeline/templates/geoserver.bc.yaml
+++ b/geoserver/.pipeline/templates/geoserver.bc.yaml
@@ -1,48 +1,93 @@
-apiVersion: template.openshift.io/v1
 kind: Template
+apiVersion: template.openshift.io/v1
+description: A build config template that can be used to produce a GeoServer imagestream, from a specified Dockerfile.
 metadata:
-  name: biohub-platform-geoserver
   labels:
     build: biohub-platform-geoserver
-annotations:
-  iconClass: icon-tomcat
+  name: biohub-platform-geoserver
 parameters:
   - name: NAME
-    displayName: Name
     description: The name assigned to all of the resources.
     required: true
     value: biohub-platform-geoserver
+  - name: SUFFIX
+    description: A name suffix used for all objects
+    required: false
+    value: '-dev'
   - name: TARGET_IMAGE_VERSION
+    description: Target image tag
     required: true
-  - name: SOURCE_IMAGE_NAME
+    value: '1.0'
+  - name: GIT_REPO_URL
+    description: The git repo containing the Dockerfile for this build.
     required: true
-    value: geoserver
-  - name: SOURCE_IMAGE_VERSION
+    value: https://github.com/bcgov/biohubbc-platform.git
+  - name: GIT_REF
+    description: The specific repo reference (eg. dev, 1.0.0, <commit sha>)
     required: true
-    value: 2.21.1
-  - name: SOURCE_IMAGE_NAMESPACE
+    value: dev
+  - name: SOURCE_CONTEXT_DIR
+    description: The repository path to the Dockerfile.
     required: true
-    value: a0ec71-tools
+    value: geoserver/biohub-geoserver
+  - name: DOCKERFILE_PATH
+    description: The path to the docker file (note. this is relative to the SOURCE_CONTEXT_DIR).
+    required: true
+    value: Dockerfile
+  - name: CPU_LIMIT
+    description: The resources CPU limit (in cores) for this build; 0 = use default.
+    required: true
+    value: '0'
+  - name: MEMORY_LIMIT
+    description: The resources Memory limit (in Mi, Gi, etc) for this build; 0Mi = use default.
+    required: true
+    value: 0Mi
+  - name: CPU_REQUEST
+    description: The resources CPU request (in cores) for this build; 0 = use default.
+    required: true
+    value: '0'
+  - name: MEMORY_REQUEST
+    description: The resources Memory request (in Mi, Gi, etc) for this build; 0Mi = use default.
+    required: true
+    value: 0Mi
 objects:
   - kind: ImageStream
-    apiVersion: v1
+    apiVersion: image.openshift.io/v1
     metadata:
-      name: '${NAME}'
+      name: ${NAME}
       labels:
         shared: 'true'
+  - kind: BuildConfig
+    apiVersion: build.openshift.io/v1
+    metadata:
+      name: '${NAME}${SUFFIX}'
+      creationTimestamp:
+      labels: {}
       annotations: {}
     spec:
-      lookupPolicy:
-        local: false
-      tags:
-        - name: '${TARGET_IMAGE_VERSION}'
-          annotations:
-          from:
-            kind: ImageStreamTag
-            name: '${SOURCE_IMAGE_NAME}:${SOURCE_IMAGE_VERSION}'
-            namespace: ${SOURCE_IMAGE_NAMESPACE}
-          generation: 1
-          importPolicy: {}
-          referencePolicy:
-            type: Source
-      successfulBuildsHistoryLimit: 5
+      source:
+        type: Git
+        git:
+          uri: ${GIT_REPO_URL}
+          ref: ${GIT_REF}
+        contextDir: ${SOURCE_CONTEXT_DIR}
+      strategy:
+        type: Docker
+        dockerStrategy:
+          dockerfilePath: '${DOCKERFILE_PATH}'
+      output:
+        to:
+          kind: ImageStreamTag
+          name: '${NAME}:${TARGET_IMAGE_VERSION}'
+      triggers:
+        - type: ConfigChange
+        - type: ImageChange
+      resources:
+        requests:
+          cpu: ${CPU_REQUEST}
+          memory: ${MEMORY_REQUEST}
+        limits:
+          cpu: ${CPU_LIMIT}
+          memory: ${MEMORY_LIMIT}
+      runPolicy: SerialLatestOnly
+      failedBuildsHistoryLimit: 5
