--- a/.config/config.json
+++ b/.config/config.json
@@ -28,6 +28,11 @@
     "test": "api-test-biohub-platform.apps.silver.devops.gov.bc.ca",
     "prod": "api-biohub-platform.apps.silver.devops.gov.bc.ca"
   },
+  "staticUrlsGeoServer": {
+    "dev": "geoserver-dev-biohub-platform.apps.silver.devops.gov.bc.ca",
+    "test": "geoserver-test-biohub-platform.apps.silver.devops.gov.bc.ca",
+    "prod": "geoserver-biohub-platform.apps.silver.devops.gov.bc.ca"
+  },
   "staticUrlsN8N": {
     "dev": "n8n-dev.apps.silver.devops.gov.bc.ca",
     "test": "n8n-test.apps.silver.devops.gov.bc.ca",
