--- a/app/package.json
+++ b/app/package.json
@@ -40,11 +40,13 @@
     "@turf/bbox": "~6.3.0",
     "@turf/boolean-equal": "~6.3.0",
     "@turf/intersect": "~6.3.0",
+    "@turf/simplify": "^6.5.0",
     "axios": "~0.21.4",
     "buffer": "^6.0.3",
     "clsx": "~1.1.1",
     "express": "~4.17.1",
     "formik": "~2.2.6",
+    "jszip": "^3.10.1",
     "keycloak-js": "^19.0.1",
     "leaflet": "~1.7.1",
     "leaflet-draw": "~1.0.4",
@@ -64,6 +66,7 @@
     "react-router-dom": "^5.3.3",
     "react-window": "~1.8.6",
     "reproj-helper": "~1.2.8",
+    "shapefile": "^0.6.6",
     "shpjs": "^3.6.3",
     "typescript": "~4.1.6",
     "uuid": "~8.3.2",
@@ -89,6 +92,7 @@
     "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-window": "~1.8.2",
+    "@types/shapefile": "^0.6.1",
     "@types/shpjs": "^3.4.0",
     "@types/uuid": "~8.3.0",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
