--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -306,40 +306,36 @@ services:
     command: ["npm", "run", "migrate-rollback"]
 
   geoserver:
-    image: kartoza/geoserver:2.21.1
+    image: ${DOCKER_PROJECT_NAME}-geoserver-${DOCKER_NAMESPACE}-img
     container_name: ${DOCKER_PROJECT_NAME}-geoserver-${DOCKER_NAMESPACE}-container
-    # restart: on-failure
+    build:
+      context: ./geoserver/biohub-geoserver
+      dockerfile: ./Dockerfile
     ports:
-      - ${GEOSERVER_TOMCAT_PORT}:8080
+      - ${GEOSERVER_PORT}:8080
     # healthcheck:
     #   test: curl --fail -s http://localhost:8080/ || exit 1
     #   interval: 5s
     #   timeout: 5s
     #   retries: 30
     environment:
-      # - POSTGRES_JNDI=TRUE
-      # - HOST=${DB_HOST}
-      # - POSTGRES_DB=${DB_DATABASE}
-      # - POSTGRES_USER=${DB_ADMIN}
-      # - POSTGRES_PASS=${DB_ADMIN_PASS}
-      - GEOSERVER_DATA_DIR=${GEOSERVER_DATA_DIRECTORY}
-      - GEOWEBCACHE_CACHE_DIR=${GEOSERVER_GEOWEBCACHE_CACHE_DIRECTORY}
+      - GEOSERVER_DATA_DIR=${GEOSERVER_DATA_DIR}
+      - GEOWEBCACHE_CACHE_DIR=${GEOWEBCACHE_CACHE_DIR}
       - GEOSERVER_ADMIN_USER=${GEOSERVER_ADMIN_USER}
       - GEOSERVER_ADMIN_PASSWORD=${GEOSERVER_ADMIN_PASSWORD}
-      # - INITIAL_MEMORY=${GEOSERVER_INITIAL_MEMORY}
-      # - MAXIMUM_MEMORY=${GEOSERVER_MAXIMUM_MEMORY}
+      - TIMEZONE=${GEOSERVER_TIMEZONE}
+      - ROOT_WEBAPP_REDIRECT=${ROOT_WEBAPP_REDIRECT}
       - TOMCAT_EXTRAS=false
-      - ROOT_WEBAPP_REDIRECT=true
-    volumes:
-      # - geoserver:${GEOSERVER_DATA_DIRECTORY}
+    # volumes:
       # Overwrite default context.xml
-      - ./Containers/geoserver/data_dir:${GEOSERVER_DATA_DIRECTORY}
-      - ./Containers/geoserver/settings/context.xml:/build_data/context.xml
+      # - ./data_dir:${GEOSERVER_HOME}/data_dir
+      # - ./geoserver/biohub-geoserver/data_dir_2:${GEOSERVER_HOME}/data_dir
+      # - ./Containers/geoserver/settings/context.xml:/build_data/context.xml
     networks:
       - biohubbc-network
-    depends_on:
-      - db
-      - db_setup
+    # depends_on:
+    #   - db
+    #   - db_setup
 
 networks:
   biohubbc-network:
@@ -348,5 +344,5 @@ networks:
 volumes:
   postgres:
     name: ${DOCKER_PROJECT_NAME}-db-${DOCKER_NAMESPACE}-vol
-  # geoserver:
-  #   name: ${DOCKER_PROJECT_NAME}-geoserver-${DOCKER_NAMESPACE}-vol
+  geoserver:
+    name: ${DOCKER_PROJECT_NAME}-geoserver-${DOCKER_NAMESPACE}-vol
