--- a/.github/workflows/backup/deploy.yml
+++ b/.github/workflows/backup/deploy.yml
@@ -14,12 +14,12 @@ jobs:
       CYPRESS_RECORD_KEY: ${{ secrets.RECORDING_KEY }}
       CYPRESS_username: ${{ secrets.CYPRESS_USER_NAME }}
       CYPRESS_password: ${{ secrets.CYPRESS_PASSWORD }}
-      CYPRESS_BASE_URL: 'https://biohub-platform-app-${{ github.event.number }}-a0ec71-dev.apps.silver.devops.gov.bc.ca'
-      CYPRESS_host: 'https://biohub-platform-app-${{ github.event.number }}-a0ec71-dev.apps.silver.devops.gov.bc.ca'
+      CYPRESS_BASE_URL: "https://biohub-platform-app-${{ github.event.number }}-a0ec71-dev.apps.silver.devops.gov.bc.ca"
+      CYPRESS_host: "https://biohub-platform-app-${{ github.event.number }}-a0ec71-dev.apps.silver.devops.gov.bc.ca"
       CYPRESS_ENVIRONMENT: ${{ github.base_ref }}
-      CYPRESS_authRealm: '35r1iman'
-      CYPRESS_authClientId: 'biohubbc'
-      CYPRESS_authUrl: 'https://${{ github.base_ref }}.oidc.gov.bc.ca'
+      CYPRESS_authRealm: "35r1iman"
+      CYPRESS_authClientId: "biohubbc"
+      CYPRESS_authUrl: "https://${{ github.base_ref }}.oidc.gov.bc.ca"
     needs:
       - deployDatabase
       - deployDatabaseSetup
@@ -33,7 +33,7 @@ jobs:
       - name: Wait for API response
         uses: nev7n/wait_for_response@v1.0.1
         with:
-          url: 'https://biohub-platform-api-${{ github.event.number }}-a0ec71-dev.apps.silver.devops.gov.bc.ca/version'
+          url: "https://biohub-platform-api-${{ github.event.number }}-a0ec71-dev.apps.silver.devops.gov.bc.ca/version"
           responseCode: 200
           timeout: 240000
           interval: 500
@@ -41,7 +41,7 @@ jobs:
       - name: Wait for APP response
         uses: nev7n/wait_for_response@v1.0.1
         with:
-          url: 'https://biohub-platform-app-${{ github.event.number }}-a0ec71-dev.apps.silver.devops.gov.bc.ca'
+          url: "https://biohub-platform-app-${{ github.event.number }}-a0ec71-dev.apps.silver.devops.gov.bc.ca"
           responseCode: 200
           timeout: 120000
           interval: 500
@@ -53,7 +53,7 @@ jobs:
         id: smoke
         continue-on-error: false
         with:
-          wait-on: 'https://biohub-platform-app-${{ github.event.number }}-a0ec71-dev.apps.silver.devops.gov.bc.ca'
+          wait-on: "https://biohub-platform-app-${{ github.event.number }}-a0ec71-dev.apps.silver.devops.gov.bc.ca"
           wait-on-timeout: 120
           record: true
           working-directory: testing/e2e
@@ -71,3 +71,121 @@ jobs:
           echo $CYPRESS_authClientId
           echo $CYPRESS_authUrl
 
+  # Build the GeoServer image
+  buildGeoserver:
+    name: Build GeoServer Image
+    runs-on: ubuntu-latest
+    if: ${{ github.event.pull_request.merged == false && github.event.pull_request.draft == false }}
+    env:
+      PR_NUMBER: ${{ github.event.number }}
+    needs:
+      - checkoutRepo
+    steps:
+      # Install Node - for `node` and `npm` commands
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+
+      # Load repo from cache
+      - name: Cache repo
+        uses: actions/cache@v2
+        id: cache-repo
+        env:
+          cache-name: cache-repo
+        with:
+          path: ${{ github.workspace }}/*
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
+
+      # Checkout the branch if not restored via cache
+      - name: Checkout Target Branch
+        if: steps.cache-repo.outputs.cache-hit != 'true'
+        uses: actions/checkout@v2
+
+      # Cache Node modules
+      - name: Cache node modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('*/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+
+      # Log in to OpenShift.
+      # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
+      # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
+      - name: Log in to OpenShift
+        run: oc login --token=${{ secrets.TOOLS_SA_TOKEN }} --server=https://api.silver.devops.gov.bc.ca:6443
+
+      # Build the GeoServer image
+      - name: Build GeoServer Image
+        working-directory: "./geoserver/.pipeline/"
+        run: |
+          npm install --only=production
+          DEBUG=* npm run build -- --pr=$PR_NUMBER
+
+  # Deploy GeoServer image
+  deployGeoserver:
+    name: Deploy Geoserver Image
+    runs-on: ubuntu-latest
+    if: ${{ github.event.pull_request.merged == false && github.event.pull_request.draft == false }}
+    env:
+      PR_NUMBER: ${{ github.event.number }}
+    needs:
+      - scaleDownPods
+      - buildGeoserver
+      # - deployDatabase
+      # - deployDatabaseSetup
+    steps:
+      # Install Node - for `node` and `npm` commands
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+
+      # Load repo from cache
+      - name: Cache repo
+        uses: actions/cache@v2
+        id: cache-repo
+        env:
+          cache-name: cache-repo
+        with:
+          path: ${{ github.workspace }}/*
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
+
+      # Checkout the branch if not restored via cache
+      - name: Checkout Target Branch
+        if: steps.cache-repo.outputs.cache-hit != 'true'
+        uses: actions/checkout@v2
+
+      # Cache Node modules
+      - name: Cache node modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('*/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+
+      # Log in to OpenShift.
+      # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
+      # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
+      - name: Log in to OpenShift
+        run: oc login --token=${{ secrets.TOOLS_SA_TOKEN }} --server=https://api.silver.devops.gov.bc.ca:6443
+
+      # Deploy the GeoServer image
+      - name: Deploy GeoServer Image
+        working-directory: "./geoserver/.pipeline/"
+        run: |
+          npm install --only=production
+          DEBUG=* npm run deploy -- --pr=$PR_NUMBER --env=dev
