--- a/Containers/geoserver/kartoza-geoserver/geoserver.cm.yaml
+++ b/Containers/geoserver/kartoza-geoserver/geoserver.cm.yaml
@@ -3,6 +3,8 @@ apiVersion: v1
 description: A config map template that can be used to produce a Kartoza GeoServer config map, which is consumable by the sibling Kartoza Geoserver build config.
 metadata:
   name: kartoza-geoserver-cm
+  labels:
+    app: kartoza-geoserver
 ## The variables under `data` is a copy of the contents of the kartoza geoserver `.env` file, with a few optional values commented out.
 ## See git repo `.env` and `env-data.sh` for default values for unset variables.
 ## Note: environment variables below are not accessible by the image by default, to be accessible they also need to be specified in the geoserver build config template, under `env`.
@@ -37,9 +39,9 @@ data:
   ## Redirect to GeoServer web interface
   ROOT_WEBAPP_REDIRECT: "true"
   ## https://docs.geoserver.org/stable/en/user/production/container.html##optimize-your-jvm
-  INITIAL_MEMORY: 2G
+  INITIAL_MEMORY: 512Mi
   ## https://docs.geoserver.org/stable/en/user/production/container.html##optimize-your-jvm
-  MAXIMUM_MEMORY: 4G
+  MAXIMUM_MEMORY: 2Gi
   INITIAL_HEAP_OCCUPANCY_PERCENT: 45
   ## Path where .ttf and otf font should be added
   FONTS_DIR: /opt/fonts
