--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -309,7 +309,7 @@ services:
     image: ${DOCKER_PROJECT_NAME}-geoserver-${DOCKER_NAMESPACE}-img
     container_name: ${DOCKER_PROJECT_NAME}-geoserver-${DOCKER_NAMESPACE}-container
     build:
-      context: ./geoserver/biohub-geoserver
+      context: https://github.com/NickPhura/docker-geoserver.git#develop
       dockerfile: ./Dockerfile
     ports:
       - ${GEOSERVER_PORT}:8080
@@ -329,7 +329,7 @@ services:
     # volumes:
       # Overwrite default context.xml
       # - ./data_dir:${GEOSERVER_HOME}/data_dir
-      # - ./geoserver/biohub-geoserver/data_dir_2:${GEOSERVER_HOME}/data_dir
+      # - ./geoserver/kartoza-geoserver/data_dir_2:${GEOSERVER_HOME}/data_dir
       # - ./Containers/geoserver/settings/context.xml:/build_data/context.xml
     networks:
       - biohubbc-network
@@ -344,5 +344,5 @@ networks:
 volumes:
   postgres:
     name: ${DOCKER_PROJECT_NAME}-db-${DOCKER_NAMESPACE}-vol
-  geoserver:
-    name: ${DOCKER_PROJECT_NAME}-geoserver-${DOCKER_NAMESPACE}-vol
+  # geoserver:
+  #   name: ${DOCKER_PROJECT_NAME}-geoserver-${DOCKER_NAMESPACE}-vol
