--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -313,11 +313,11 @@ services:
       dockerfile: ./Dockerfile
     ports:
       - ${GEOSERVER_PORT}:8080
-    # healthcheck:
-    #   test: curl --fail -s http://localhost:8080/ || exit 1
-    #   interval: 5s
-    #   timeout: 5s
-    #   retries: 30
+    healthcheck:
+      test: curl --fail -s http://localhost:8080 || exit 1
+      interval: 5s
+      timeout: 5s
+      retries: 30
     environment:
       - GEOSERVER_DATA_DIR=${GEOSERVER_DATA_DIR}
       - GEOWEBCACHE_CACHE_DIR=${GEOWEBCACHE_CACHE_DIR}
@@ -326,16 +326,8 @@ services:
       - TIMEZONE=${GEOSERVER_TIMEZONE}
       - ROOT_WEBAPP_REDIRECT=${ROOT_WEBAPP_REDIRECT}
       - TOMCAT_EXTRAS=false
-    # volumes:
-      # Overwrite default context.xml
-      # - ./data_dir:${GEOSERVER_HOME}/data_dir
-      # - ./geoserver/kartoza-geoserver/data_dir_2:${GEOSERVER_HOME}/data_dir
-      # - ./Containers/geoserver/settings/context.xml:/build_data/context.xml
     networks:
       - biohubbc-network
-    # depends_on:
-    #   - db
-    #   - db_setup
 
 networks:
   biohubbc-network:
@@ -344,5 +336,3 @@ networks:
 volumes:
   postgres:
     name: ${DOCKER_PROJECT_NAME}-db-${DOCKER_NAMESPACE}-vol
-  # geoserver:
-  #   name: ${DOCKER_PROJECT_NAME}-geoserver-${DOCKER_NAMESPACE}-vol
