--- a/Containers/geoserver/kartoza-geoserver/geoserver.secret.yaml
+++ b/Containers/geoserver/kartoza-geoserver/geoserver.secret.yaml
@@ -5,4 +5,4 @@ metadata:
   labels:
     app: kartoza-geoserver
 data:
-  geoserver-admin-password: <your admin password here>
+  geoserver-admin-password:
