--- a/Containers/geoserver/kartoza-geoserver/geoserver.secret.yaml
+++ b/Containers/geoserver/kartoza-geoserver/geoserver.secret.yaml
@@ -1,5 +1,6 @@
 kind: Secret
 apiVersion: v1
+description: A template that can be used to produce a GeoServer Secret (note. secret values need to be added manually after secret creation)
 metadata:
   name: kartoza-geoserver
   labels:
