--- a/app/package.json
+++ b/app/package.json
@@ -49,10 +49,11 @@
     "formik": "~2.2.6",
     "jszip": "^3.10.1",
     "keycloak-js": "^19.0.1",
-    "leaflet": "~1.7.1",
+    "leaflet": "^1.8.0",
     "leaflet-draw": "~1.0.4",
     "leaflet-fullscreen": "~1.0.2",
     "leaflet.locatecontrol": "~0.76.0",
+    "leaflet.markercluster": "^1.5.3",
     "lodash-es": "~4.17.21",
     "moment": "~2.29.2",
     "node-sass": "~4.14.1",
@@ -61,7 +62,6 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "~11.3.2",
     "react-leaflet": "~3.1.0",
-    "react-leaflet-cluster": "~1.0.3",
     "react-number-format": "~4.5.2",
     "react-router": "^5.3.3",
     "react-router-dom": "^5.3.3",
@@ -80,9 +80,10 @@
     "@testing-library/user-event": "~12.6.0",
     "@types/geojson": "~7946.0.7",
     "@types/jest": "~28.1.7",
-    "@types/leaflet": "~1.7.9",
+    "@types/leaflet": "^1.7.11",
     "@types/leaflet-draw": "~1.0.5",
     "@types/leaflet-fullscreen": "~1.0.6",
+    "@types/leaflet.markercluster": "^1.5.1",
     "@types/lodash-es": "~4.17.4",
     "@types/node": "~14.14.31",
     "@types/node-sass": "~4.11.2",
