--- a/n8n/package.json
+++ b/n8n/package.json
@@ -8,8 +8,8 @@
     "url": "https://github.com/bcgov/biohubbc-platform.git"
   },
   "engines": {
-    "node": ">= 14.15.0",
-    "npm": ">= 6.14.8"
+    "node": ">= 14.15.0 <= 16.13.0",
+    "npm": ">= 6.14.8 <= 8.3.0"
   },
   "scripts": {
     "export": "npm-run-all -l -s export-credentials export-workflows",
