--- a/api/.docker/api/Dockerfile
+++ b/api/.docker/api/Dockerfile
@@ -1,10 +1,14 @@
-FROM node:14
+FROM node:16.13.0-alpine
+
+RUN apk update && apk add python2 make g++
 
 ENV HOME=/opt/app-root/src
 
 RUN mkdir -p $HOME
 
 WORKDIR $HOME
+
+ENV PATH $HOME/node_modules/.bin:$PATH
 
 # Copy the package files only
 # A wildcard is used to ensure both package.json AND package-lock.json are copied where available (npm@5+)
@@ -14,7 +18,7 @@ COPY package*.json ./
 # RUN npm install --only=production
 RUN npm install
 
-ENV PATH ${HOME}/node_modules/.bin/:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:$PATH
+# ENV PATH ${HOME}/node_modules/.bin/:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:$PATH
 
 # Copy the rest of the files
 COPY . ./
