--- a/api/.pipeline/package.json
+++ b/api/.pipeline/package.json
@@ -4,8 +4,8 @@
   "description": "Contains dependencies and scripts for executing OpenShift pipeline build/deploy scripts",
   "license": "Apache-2.0",
   "engines": {
-    "node": ">= 14.0.0",
-    "npm": ">= 6.0.0"
+    "node": ">= 14.0.0 <= 16.13.0",
+    "npm": ">= 6.0.0 <= 8.3.0"
   },
   "repository": {
     "type": "git",
