--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,7 +2,9 @@
 # This DockerFile is used for deployments only, please do not change for other purposes. It will break our deployment.
 # ####################################################################################################################
 
-FROM node:14
+FROM node:16.13.0-alpine
+
+RUN apk update && apk add python2 make g++
 
 ENV HOME=/opt/app-root/src
 
@@ -10,13 +12,15 @@ RUN mkdir -p $HOME
 
 WORKDIR $HOME
 
+ENV PATH $HOME/node_modules/.bin:$PATH
+
 # Copy the package files only
 # A wildcard is used to ensure both package.json AND package-lock.json are copied where available (npm@5+)
 COPY ./package*.json ./
 
 RUN npm install
 
-ENV PATH /opt/rh/rh-nodejs8/root/usr/bin:${HOME}/node_modules/.bin/:${HOME}/app.npm-global/bin/:${HOME}/bin:${HOME}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# ENV PATH /opt/rh/rh-nodejs8/root/usr/bin:${HOME}/node_modules/.bin/:${HOME}/app.npm-global/bin/:${HOME}/bin:${HOME}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
 # Copy the rest of the files
 COPY . ./
