--- a/api/package.json
+++ b/api/package.json
@@ -24,8 +24,8 @@
     "format-fix": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss}\""
   },
   "engines": {
-    "node": ">= 14.0.0",
-    "npm": ">= 6.0.0"
+    "node": ">= 14.0.0 <= 16.13.0",
+    "npm": ">= 6.0.0 <= 8.3.0"
   },
   "dependencies": {
     "@elastic/elasticsearch": "~8.1.0",
