--- a/app/.docker/app/Dockerfile
+++ b/app/.docker/app/Dockerfile
@@ -1,4 +1,6 @@
-FROM node:14
+FROM node:16.13.0-alpine
+
+RUN apk update && apk add python2 make g++
 
 ENV HOME=/opt/app-root/src
 
@@ -6,15 +8,17 @@ RUN mkdir -p $HOME
 
 WORKDIR $HOME
 
+ENV PATH $HOME/node_modules/.bin:$PATH
+
 # Copy the package files only
 # A wildcard is used to ensure both package.json AND package-lock.json are copied where available (npm@5+)
 COPY package*.json ./
 
 # If you are building your code for production
-# RUN npm install --only=production
-RUN npm install
+# RUN npm install --legacy-peer-deps --only=production
+RUN npm install --legacy-peer-deps
 
-ENV PATH ${HOME}/node_modules/.bin/:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:$PATH
+# ENV PATH ${HOME}/node_modules/.bin/:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:$PATH
 
 # Copy the rest of the files
 COPY . ./
