--- a/app/package.json
+++ b/app/package.json
@@ -21,8 +21,8 @@
     "format-fix": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss}\""
   },
   "engines": {
-    "node": ">= 14.0.0",
-    "npm": ">= 6.0.0"
+    "node": ">= 14.0.0 <= 16.13.0",
+    "npm": ">= 6.0.0 <= 8.3.0"
   },
   "dependencies": {
     "@bcgov/bc-sans": "~1.0.1",
@@ -36,7 +36,6 @@
     "@mui/styles": "^5.9.3",
     "@react-keycloak/web": "^3.4.0",
     "@react-leaflet/core": "~1.0.2",
-    "@testing-library/react-hooks": "^8.0.1",
     "@tmcw/togeojson": "~4.2.0",
     "@turf/bbox": "~6.3.0",
     "@turf/boolean-equal": "~6.3.0",
@@ -56,7 +55,6 @@
     "leaflet.markercluster": "^1.5.3",
     "lodash-es": "~4.17.21",
     "moment": "~2.29.2",
-    "node-sass": "~4.14.1",
     "qs": "~6.9.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -77,6 +75,7 @@
     "@babel/preset-typescript": "~7.12.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "~12.6.0",
     "@types/geojson": "~7946.0.7",
     "@types/jest": "~28.1.7",
@@ -86,7 +85,7 @@
     "@types/leaflet.markercluster": "^1.5.1",
     "@types/lodash-es": "~4.17.4",
     "@types/node": "~14.14.31",
-    "@types/node-sass": "~4.11.2",
+    "@types/sass": "~1.43.1",
     "@types/qs": "~6.9.5",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
@@ -107,7 +106,8 @@
     "jest-sonar-reporter": "~2.0.0",
     "prettier": "~2.7.1",
     "prettier-plugin-organize-imports": "~3.1.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "sass": "~1.55.0"
   },
   "browserslist": {
     "production": [
