--- a/database/package.json
+++ b/database/package.json
@@ -8,8 +8,8 @@
     "url": "https://github.com/bcgov/biohubbc-platform.git"
   },
   "engines": {
-    "node": ">= 14.0.0",
-    "npm": ">= 6.0.0"
+    "node": ">= 14.0.0 <= 16.13.0",
+    "npm": ">= 6.0.0 <= 8.3.0"
   },
   "scripts": {
     "setup": "npm-run-all -l -s migrate-latest seed",
@@ -22,7 +22,6 @@
     "format-fix": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss}\""
   },
   "dependencies": {
-    "@types/csv-parse": "^1.2.2",
     "knex": "~1.0.1",
     "pg": "~8.3.0",
     "typescript": "~4.1.6"
