--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -12,7 +12,8 @@ RUN mkdir -p $HOME
 
 WORKDIR $HOME
 
-ENV PATH $HOME/node_modules/.bin:$PATH
+# ENV PATH $HOME/node_modules/.bin:$PATH
+ENV PATH /opt/rh/rh-nodejs8/root/usr/bin:${HOME}/node_modules/.bin/:${HOME}/app.npm-global/bin/:${HOME}/bin:${HOME}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
 # Copy the package files only
 # A wildcard is used to ensure both package.json AND package-lock.json are copied where available (npm@5+)
@@ -20,7 +21,6 @@ COPY ./package*.json ./
 
 RUN npm install
 
-# ENV PATH /opt/rh/rh-nodejs8/root/usr/bin:${HOME}/node_modules/.bin/:${HOME}/app.npm-global/bin/:${HOME}/bin:${HOME}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
 # Copy the rest of the files
 COPY . ./
