--- a/database/.docker/db/Dockerfile.setup
+++ b/database/.docker/db/Dockerfile.setup
@@ -9,7 +9,8 @@ RUN mkdir -p $HOME
 
 WORKDIR $HOME
 
-ENV PATH $HOME/node_modules/.bin:$PATH
+# ENV PATH $HOME/node_modules/.bin:$PATH
+ENV PATH /opt/rh/rh-nodejs8/root/usr/bin:${HOME}/node_modules/.bin/:${HOME}/app.npm-global/bin/:${HOME}/bin:${HOME}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
 COPY . .
 
