Try removing FROM override

--- a/api/.pipeline/templates/api.bc.yaml
+++ b/api/.pipeline/templates/api.bc.yaml
@@ -101,10 +101,9 @@ objects:
           ref: '${SOURCE_REPOSITORY_REF}'
         type: Git
       strategy:
-        dockerStrategy:
-          from:
-            kind: ImageStreamTag
-            name: ${SOURCE_IMAGE_NAME}:${SOURCE_IMAGE_TAG}
+        # from:
+        #   kind: ImageStreamTag
+        #   name: ${SOURCE_IMAGE_NAME}:${SOURCE_IMAGE_TAG}
         type: Docker
       successfulBuildsHistoryLimit: 5
       triggers:
