--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -4,7 +4,7 @@
 
 FROM node:16.13.0-alpine
 
-RUN yum -y update && yum -y install python2 make g++
+RUN apk update && apk add python2 make g++
 
 ENV HOME=/opt/app-root/src
 
@@ -12,11 +12,10 @@ RUN mkdir -p $HOME
 
 WORKDIR $HOME
 
-# ENV PATH $HOME/node_modules/.bin:$PATH
-ENV PATH /opt/rh/rh-nodejs8/root/usr/bin:${HOME}/node_modules/.bin/:${HOME}/app.npm-global/bin/:${HOME}/bin:${HOME}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+ENV PATH $HOME/node_modules/.bin:$PATH
+# ENV PATH /opt/rh/rh-nodejs8/root/usr/bin:${HOME}/node_modules/.bin/:${HOME}/app.npm-global/bin/:${HOME}/bin:${HOME}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
 # Copy the package files only
-# A wildcard is used to ensure both package.json AND package-lock.json are copied where available (npm@5+)
 COPY ./package*.json ./
 
 RUN npm install
