--- a/app/.docker/app/Dockerfile
+++ b/app/.docker/app/Dockerfile
@@ -11,12 +11,9 @@ WORKDIR $HOME
 ENV PATH $HOME/node_modules/.bin:$PATH
 
 # Copy the package files only
-# A wildcard is used to ensure both package.json AND package-lock.json are copied where available (npm@5+)
 COPY package*.json ./
 
-# If you are building your code for production
-# RUN npm install --legacy-peer-deps --only=production
-RUN npm install --legacy-peer-deps
+RUN npm install --legacy-peer-deps --only=production
 
 # ENV PATH ${HOME}/node_modules/.bin/:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:$PATH
 
