--- a/database/.docker/db/Dockerfile.migrate
+++ b/database/.docker/db/Dockerfile.migrate
@@ -13,10 +13,7 @@ ENV PATH $HOME/node_modules/.bin:$PATH
 
 COPY . .
 
-# If you are building your code for production
-# RUN npm install --only=production
-# RUN npm set progress=false
-RUN npm install
+RUN npm install --only=production
 
 # run the database migrations only (no seeeding)
 CMD [ "npm", "run", "migrate-latest" ]
