--- a/database/.docker/db/Dockerfile.setup
+++ b/database/.docker/db/Dockerfile.setup
@@ -9,15 +9,12 @@ RUN mkdir -p $HOME
 
 WORKDIR $HOME
 
-# ENV PATH $HOME/node_modules/.bin:$PATH
-ENV PATH /opt/rh/rh-nodejs8/root/usr/bin:${HOME}/node_modules/.bin/:${HOME}/app.npm-global/bin/:${HOME}/bin:${HOME}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+ENV PATH $HOME/node_modules/.bin:$PATH
+# ENV PATH /opt/rh/rh-nodejs8/root/usr/bin:${HOME}/node_modules/.bin/:${HOME}/app.npm-global/bin/:${HOME}/bin:${HOME}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
 COPY . .
 
-# If you are building your code for production
-# RUN npm install --only=production
-# RUN npm set progress=false
-RUN npm install
+RUN npm install --only=production
 
 # run the database migrations and seeding
 CMD [ "npm", "run", "setup" ]
