revert database helper dockerfile changes

--- a/database/.docker/db/Dockerfile.rollback
+++ b/database/.docker/db/Dockerfile.rollback
@@ -13,7 +13,7 @@ ENV PATH $HOME/node_modules/.bin:$PATH
 
 COPY . .
 
-RUN npm install --only=production
+RUN npm install
 
 # rollback the latest batch of database migrations
 CMD [ "npm", "run", "migrate-rollback" ]
