--- a/database/.docker/db/Dockerfile.migrate
+++ b/database/.docker/db/Dockerfile.migrate
@@ -13,7 +13,7 @@ ENV PATH $HOME/node_modules/.bin:$PATH
 
 COPY . .
 
-RUN npm install --only=production
+RUN npm install
 
 # run the database migrations only (no seeeding)
 CMD [ "npm", "run", "migrate-latest" ]
