install handlebars and pug

--- a/app/package.json
+++ b/app/package.json
@@ -47,6 +47,7 @@
     "clsx": "~1.1.1",
     "express": "~4.17.1",
     "formik": "~2.2.6",
+    "handlebars": "^4.7.7",
     "jszip": "^3.10.1",
     "keycloak-js": "^19.0.1",
     "leaflet": "^1.8.0",
@@ -57,6 +58,7 @@
     "lodash-es": "~4.17.21",
     "moment": "~2.29.2",
     "node-sass": "~4.14.1",
+    "pug": "^3.0.2",
     "qs": "~6.9.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
