--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,9 @@
     "node": ">= 14.0.0",
     "npm": ">= 6.0.0"
   },
+  "browser": {
+    "fs": false
+  },
   "dependencies": {
     "@bcgov/bc-sans": "~1.0.1",
     "@emotion/react": "^11.10.0",
@@ -89,6 +92,7 @@
     "@types/lodash-es": "~4.17.4",
     "@types/node": "~14.14.31",
     "@types/node-sass": "~4.11.2",
+    "@types/pug": "^2.0.6",
     "@types/qs": "~6.9.5",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
