Move react-app-rewired + related dependencies to dev dependencies. Run `npm audit fix`

--- a/api/package.json
+++ b/api/package.json
@@ -31,7 +31,7 @@
     "@elastic/elasticsearch": "~8.1.0",
     "adm-zip": "~0.5.5",
     "ajv": "~8.6.3",
-    "aws-sdk": "~2.742.0",
+    "aws-sdk": "^2.1243.0",
     "axios": "~0.21.4",
     "clamdjs": "~1.0.2",
     "db-migrate": "~0.11.11",
@@ -45,7 +45,7 @@
     "knex": "~1.0.2",
     "lodash": "~4.17.21",
     "mime": "~2.5.2",
-    "moment": "~2.29.2",
+    "moment": "^2.29.4",
     "multer": "~1.4.3",
     "openapi-request-validator": "~11.0.0",
     "openapi-response-validator": "~11.0.0",
@@ -88,7 +88,7 @@
     "gulp": "~4.0.2",
     "gulp-typescript": "~5.0.1",
     "mocha": "~8.4.0",
-    "nodemon": "~2.0.14",
+    "nodemon": "^2.0.20",
     "npm-run-all": "~4.1.5",
     "nyc": "~15.1.0",
     "prettier": "~2.3.2",
