--- a/app/package.json
+++ b/app/package.json
@@ -42,15 +42,12 @@
     "@turf/boolean-equal": "~6.3.0",
     "@turf/intersect": "~6.3.0",
     "@turf/simplify": "^6.5.0",
-    "assert": "^2.0.0",
     "axios": "~0.21.4",
     "buffer": "^6.0.3",
     "clsx": "~1.1.1",
     "dompurify": "^2.4.0",
     "express": "~4.17.1",
     "formik": "~2.2.6",
-    "fs-constants": "^1.0.0",
-    "fs-extra": "^10.1.0",
     "handlebars": "^4.7.7",
     "jszip": "^3.10.1",
     "keycloak-js": "^19.0.1",
@@ -62,7 +59,6 @@
     "lodash-es": "~4.17.21",
     "moment": "~2.29.2",
     "node-sass": "~4.14.1",
-    "path-browserify": "^1.0.1",
     "pug": "^3.0.2",
     "qs": "~6.9.4",
     "react": "^17.0.2",
@@ -76,7 +72,6 @@
     "reproj-helper": "~1.2.8",
     "shapefile": "^0.6.6",
     "shpjs": "^3.6.3",
-    "stream-browserify": "^3.0.0",
     "typescript": "~4.1.6",
     "uuid": "~8.3.2",
     "yup": "~0.32.9"
@@ -109,16 +104,21 @@
     "@types/uuid": "~8.3.0",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
+    "assert": "^2.0.0",
     "axios-mock-adapter": "~1.19.0",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "~8.5.0",
     "eslint-plugin-prettier": "~4.2.1",
+    "fs-constants": "^1.0.0",
+    "fs-extra": "^10.1.0",
     "jest": "^27.5.1",
     "jest-sonar-reporter": "~2.0.0",
+    "path-browserify": "^1.0.1",
     "prettier": "~2.7.1",
     "prettier-plugin-organize-imports": "~3.1.0",
     "react-app-rewired": "~2.2.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "stream-browserify": "^3.0.0"
   },
   "browserslist": {
     "production": [
