BHBC-1981: POC handlebars library rendering eml (#136)

--- a/app/package.json
+++ b/app/package.json
@@ -8,8 +8,8 @@
     "url": "https://github.com/bcgov/biohubbc-platform.git"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "deploy_start": "node server",
     "test": "react-scripts test --ci --watchAll=false --runInBand",
     "test:watch": "react-scripts test",
@@ -45,8 +45,10 @@
     "axios": "~0.21.4",
     "buffer": "^6.0.3",
     "clsx": "~1.1.1",
+    "dompurify": "^2.4.0",
     "express": "~4.17.1",
     "formik": "~2.2.6",
+    "handlebars": "^4.7.7",
     "jszip": "^3.10.1",
     "keycloak-js": "^19.0.1",
     "leaflet": "^1.8.0",
@@ -57,6 +59,7 @@
     "lodash-es": "~4.17.21",
     "moment": "~2.29.2",
     "node-sass": "~4.14.1",
+    "pug": "^3.0.2",
     "qs": "~6.9.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -78,6 +81,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "~12.6.0",
+    "@types/dompurify": "^2.3.4",
     "@types/geojson": "~7946.0.7",
     "@types/jest": "~28.1.7",
     "@types/leaflet": "^1.7.11",
@@ -87,6 +91,7 @@
     "@types/lodash-es": "~4.17.4",
     "@types/node": "~14.14.31",
     "@types/node-sass": "~4.11.2",
+    "@types/pug": "^2.0.6",
     "@types/qs": "~6.9.5",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
@@ -99,15 +104,21 @@
     "@types/uuid": "~8.3.0",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
+    "assert": "^2.0.0",
     "axios-mock-adapter": "~1.19.0",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "~8.5.0",
     "eslint-plugin-prettier": "~4.2.1",
+    "fs-constants": "^1.0.0",
+    "fs-extra": "^10.1.0",
     "jest": "^27.5.1",
     "jest-sonar-reporter": "~2.0.0",
+    "path-browserify": "^1.0.1",
     "prettier": "~2.7.1",
     "prettier-plugin-organize-imports": "~3.1.0",
-    "react-scripts": "^5.0.1"
+    "react-app-rewired": "~2.2.1",
+    "react-scripts": "^5.0.1",
+    "stream-browserify": "^3.0.0"
   },
   "browserslist": {
     "production": [
