--- a/api/.docker/api/Dockerfile
+++ b/api/.docker/api/Dockerfile
@@ -1,4 +1,7 @@
-FROM node:14
+FROM node:16-slim
+
+RUN apt-get update -y
+RUN apt-get install -y g++ make python2
 
 ENV HOME=/opt/app-root/src
 
@@ -10,9 +13,8 @@ WORKDIR $HOME
 # A wildcard is used to ensure both package.json AND package-lock.json are copied where available (npm@5+)
 COPY package*.json ./
 
-# If you are building your code for production
-# RUN npm install --only=production
-RUN npm install
+# Install packages
+RUN npm ci
 
 ENV PATH ${HOME}/node_modules/.bin/:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:$PATH
 
