--- a/api/package.json
+++ b/api/package.json
@@ -24,8 +24,8 @@
     "format-fix": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss}\""
   },
   "engines": {
-    "node": ">= 14.0.0",
-    "npm": ">= 6.0.0"
+    "node": ">= 16.0.0",
+    "npm": ">= 8.0.0"
   },
   "dependencies": {
     "@elastic/elasticsearch": "~8.1.0",
@@ -40,13 +40,13 @@
     "express-openapi": "~9.3.0",
     "fast-xml-parser": "^4.0.8",
     "jsonpath": "~1.1.1",
-    "jsonwebtoken": "~8.5.1",
+    "jsonwebtoken": "~9.0.0",
     "jwks-rsa": "~2.0.5",
-    "knex": "~1.0.2",
+    "knex": "~2.3.0",
     "lodash": "~4.17.21",
     "mime": "~2.5.2",
     "moment": "^2.29.4",
-    "multer": "~1.4.3",
+    "multer": "~1.4.5-lts.1",
     "openapi-request-validator": "~11.0.0",
     "openapi-response-validator": "~11.0.0",
     "pg": "~8.7.1",
@@ -66,7 +66,7 @@
     "@types/geojson": "~7946.0.8",
     "@types/gulp": "~4.0.9",
     "@types/jsonpath": "~0.2.0",
-    "@types/jsonwebtoken": "~8.5.5",
+    "@types/jsonwebtoken": "~8.5.9",
     "@types/lodash": "~4.14.176",
     "@types/mime": "~2.0.3",
     "@types/mocha": "~9.0.0",
