--- a/database/.docker/db/Dockerfile.setup
+++ b/database/.docker/db/Dockerfile.setup
@@ -1,23 +1,16 @@
-FROM node:14
+FROM node:16-slim
 
-# RUN apt-get -qq update
-# RUN npm install -g npm
+RUN apt-get update -y
+RUN apt-get install -y g++ make python2
 
-# set variables
-ENV HOME_ROOT=/opt/app-root
 ENV HOME=/opt/app-root/src
 
 RUN mkdir -p $HOME
-
-WORKDIR $HOME_ROOT
 
 WORKDIR $HOME
 
 COPY . .
 
-# If you are building your code for production
-# RUN npm install --only=production
-# RUN npm set progress=false
 RUN npm install
 
 # run the database migrations and seeding
